--- a/vite-project/src/Scss/style.scss
+++ b/vite-project/src/Scss/style.scss
@@ -1,21 +1,37 @@
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  //   justify-content: space-between;
   background-color: rgb(202, 201, 201);
   border-radius: 12px;
-  border: 1px solid #ccc;
-  width: 300px;
-  height: 350px;
-  padding: 20px;
-  margin: 20px;
+  width: 250px;
+  height: 320px;
+  border: 1px solid;
   &-header {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    & img {
-      margin-right: 20px;
-      border-radius: 8px;
-    }
+    // & img {
+    //   width: 250px;
+    //   height: 120px;
+    //   max-height: 120px;
+    //   background-color: lightgray;
+    //   border-top-right-radius: 12px;
+    //   border-top-left-radius: 12px;
+    //   object-fit: contain;
+    // }
   }
   &-info {
+    height: 160px;
+    max-height: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     text-align: start;
+    padding: 20px 10px;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
     p {
       margin: 0;
     }
