--- a/vite-project/src/Scss/style.scss
+++ b/vite-project/src/Scss/style.scss
@@ -1,26 +1,30 @@
+body{
+  background-color: rgb(234, 234, 234);
+  font-family: queens, sans-serif;
+}
 .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  //   justify-content: space-between;
-  background-color: rgb(202, 201, 201);
+     justify-content: space-between;
+  // background-color: rgb(202, 201, 201);
   border-radius: 12px;
   width: 250px;
   height: 320px;
-  border: 1px solid;
+  // border: 1px solid;
   &-header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    // & img {
-    //   width: 250px;
-    //   height: 120px;
-    //   max-height: 120px;
-    //   background-color: lightgray;
-    //   border-top-right-radius: 12px;
-    //   border-top-left-radius: 12px;
-    //   object-fit: contain;
-    // }
+     & img {
+       width: 250px;
+       height: 120px;
+       max-height: 120px;
+       background-color: lightgray;
+       border-top-right-radius: 12px;
+       border-top-left-radius: 12px;
+       object-fit: contain;
+     }
   }
   &-info {
     height: 160px;
@@ -30,8 +34,8 @@
     justify-content: space-between;
     text-align: start;
     padding: 20px 10px;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
+    border-radius: 5px;
+    background-color: white;
     p {
       margin: 0;
     }
