--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,9 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-color: #ffff
+color: #ffff;
+
+/* color: #d3d3d3; */
 }
 
 @keyframes logo-spin {
