--- a/src/Scss/style.scss
+++ b/src/Scss/style.scss
@@ -1,5 +1,5 @@
 body{
-    background-color: white;
+    background-color: #f5f5f5;
     font-family: Queens Medium,serif;
   }
   .card {
@@ -7,14 +7,10 @@ body{
     flex-direction: column;
     justify-content: center;
       justify-content: space-evenly;
-    // display: grid;
-    // grid-template-columns: auto auto auto auto;
-    // background-color: rgb(243, 243, 243);
     border-radius: 12px;
     width: 250px;
     height: 220px;
-    margin-top: 20px;
-    // border: 1px solid;
+    margin-top: 150px;
     &-header {
       display: flex;
       flex-direction: column;
@@ -22,8 +18,7 @@ body{
        & img {
          width: 250px;
          height: 200px;
-        //  max-height: 120px;
-         background-color: rgb(246, 244, 244);
+         background-color: rgb(240, 238, 238);
          border-top-right-radius: 12px;
          border-top-left-radius: 12px;
          object-fit: contain;
@@ -54,17 +49,3 @@ body{
   body::-webkit-scrollbar-thumb {
     background: rgb(85, 85, 85);
   }
-  // .btn{
-  //   display: flex;
-  //   flex-direction: column;
-  //   // justify-content: center;
-  // // display: grid;
-  // //   grid-template-columns: auto auto auto auto;
-  // //   margin-top: 60px;
-  // // position: absolute;
-  // // top: 320px;
-  // font-size: 15px;
-  // color:rgb(98, 98, 98);
-  // z-index: 1;
-  //     justify-content: space-evenly;
-  // }
