--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -1,8 +1,9 @@
+
 .product_container {
-    background-color: rgb(246, 244, 244);
-    width: 350px;
-    height: 330px;
-    margin-left: 2cm;
+    // background-color: rgb(246, 244, 244);
+    // width: 350px;
+    // height: 330px;
+    // margin-left: 2cm;
   
     .image_product {
       width: 300px;
