--- a/src/Scss/style.scss
+++ b/src/Scss/style.scss
@@ -24,7 +24,7 @@ body{
          object-fit: contain;
        }
     }
-    &-info {
+    &-infoo {
       height: 160px;
       max-height: 180px;
       display: flex;
