--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 color: #ffff;
 
-/* color: #d3d3d3; */
+/* color: #283f46aa; */
 }
 
 @keyframes logo-spin {
