--- a/src/ProductScss/style.scss
+++ b/src/ProductScss/style.scss
@@ -56,9 +56,9 @@
     border-right: 5px solid transparent;
   }
   
-  @media (max-width: 600px) {
+  @media only screen and (max-width: 600px) {
     .drawer {
-      display: block;
+      display: none;
     }
   }
   
